ns/manserfam/italy21/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: italy21
  namespace: manserfam
spec: 
  replicas: 1
  template:
    spec:
      containers:
      - image: jonas27test/goserver:latest
        name: italy21
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - mountPath: /static
            name: italy21-storage
      volumes:
      - name: italy21-storage
        hostPath:
          path: "/volumes/manserfam/italy21/italy21/static"
      restartPolicy: Always
