ns/manserfam/italy21/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: italy21
  namespace: manserfam
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
